# pylabs

./: Makefile  pyproject.toml
decorators/: arg.py  chained_star_percent.py  functool_wraps.py  greet.py  logger.py  make_pretty.py  nested.py  repeat.py  smart_divide.py  timer.py  validate_postive.py
fast/: main.py
fast/apis/: health.py  jokes.py  my_ip.py  palindrome.py  quotes.py  status.py  tasks.py
fast/tasks/: activity.py  cleanup.py  email.py
notebooks/: dataclasses.ipynb  pydantic.ipynb
